# libpamac

./: NEWS  README.md  meson.build  meson_options.txt
.tx/: config
data/: meson.build
data/dbus/: meson.build
data/polkit/: meson.build  org.manjaro.pamac.policy.in
data/systemd/: pamac-mirrorlist.service
examples/python/: appstream.py  empty_transaction.py  list_installed_pkgs.py  list_installed_pkgs_async.py  test-infos.py
po/: LINGUAS  af.po  ar.po  ast.po  az.po  az_AZ.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  co.po  cs.po  cy.po  da.po  de.po  de_AT.po  de_CH.po  de_DE.po  el.po  el_GR.po  en_GB.po  en_ee.po  eo.po  es.po  es_419.po  es_AR.po  es_ES.po  es_MX.po  es_SV.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  fo.po  fr.po  gl.po  gl_ES.po  (+62 more)
src/: alpm_config.vala  alpm_package.vala  alpm_utils.vala  appstream_interface.vala  appstream_plugin.vala  aur.vala  aur_interface.vala  aur_plugin.vala  checkupdates.vala  daemon.vala  daemon_interface.vala  database.vala  dependency_checker.vala  flatpak_interface.vala  flatpak_plugin.vala  meson.build  outdated_checker.vala  package.vala  pamac_config.vala  pamac_config_daemon.vala  plugin_loader.vala  snap_interface.vala  snap_plugin.vala  transaction.vala  transaction_interface.vala  transaction_interface_daemon.vala  transaction_interface_root.vala  updates_checker.vala  utils.vala  version.vala
vapi/: appstream.vapi  libalpm.vapi
